--- a/DevMedia/projetos/Projeto-site-cafeteria/index.html
+++ b/DevMedia/projetos/Projeto-site-cafeteria/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/topo.css">
     <link rel="stylesheet" href="css/banner.css">
+    <link rel="stylesheet" href="css/horarios.css">
     <title>Cafeteria</title>
 </head>
 
@@ -75,7 +76,7 @@
             <li>
                 <h3>segunda</h3>
                 <div></div>
-                <p>09:00 - 22:00</p>
+                <p>Fechado</p>
             </li>
             <li>
                 <h3>terça</h3>
