--- a/DevMedia/projetos/Projeto-site-cafeteria/index.html
+++ b/DevMedia/projetos/Projeto-site-cafeteria/index.html
@@ -1,121 +1,149 @@
-<!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fraunces:opsz@9..144&family=Lato&family=Merriweather&family=Oswald&family=Poppins&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="shortcur icon" href="./img/logo.ico" />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Manhattan - Coffee House</title>
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fraunces&family=Lato:wght@300&family=Oswald&display=swap"
-    rel="stylesheet">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/topo.css">
-    <link rel="stylesheet" href="css/banner.css">
-    <link rel="stylesheet" href="css/horarios.css">
-    <title>Cafeteria</title>
-</head>
-
-<body>
-    <div class="topo">
-        <img class="logo" src="assets/logo.ico" alt="Logo da padaria">
-        <ul class="topo__lista">
-            <li class="topo__lista-item"><a href="#informacoes">informações</a></li>
-            <li class="topo__lista-item"><a href="#contato">contatos</a></li>
-            <li class="topo__lista-item"><a href="#horario">horários</a></li>
-        </ul>
+  <body>
+    <div class="topo"> <!-- Topo da página -->
+      <img src="./img/logo.png" alt="logomarca" />
+      <div>
+        <a href="#informacoes">INFORMAÇÕES</a>
+        <a href="#contatos">CONTATOS</a>
+        <a href="#horarios">HORÁRIOS</a>
+      </div>
     </div>
-    <div class="banner">
-        <h1 class="titulo">MANHATTA-COFFEE HOUSE</h1>
+    <div id="banner" class="container-parallax1"> <!-- Seção Banner da página -->
+      <div>
+        <h1>MANHATTAN - COFFEE HOUSE</h1>
+      </div>
     </div>
-    <div class="informacoes">
-        <h2 class="subtitulo">Experimente o Melhor café da cidade!</h2>
-        <p class="paragraph">O café não é uma simples bebida que foi preparada por alguém. O café é
-            momento e nós mostraremos isso. Frases como “Que tal tomarmos um café?”
-            ou até então “Vamos fazer um café?” são demonstrações de que um dos
-            momentos que mais reforçam os laços para com o próximo está finalmente
-            por acontecer. Fraco ou forte? Com ou sem açúcar? Você deseja açúcar ou
-            adoçante? Estas são frases que ouvimos em vários lugares. Em quase todos
-            os locais onde há pessoas há também café. Parecemos intrínsecos ao café.
-            Aqui na Manhattan serviremos para você com muito carinho o nosso querido
-            e amado Amaros Coffe diretamente do nosso cafezal em Minas Gerais. Para
-            todos nós, café é coisa séria e merece todo o cuidado.</p>
-        <div class="informacoes2">
-            <h3>Um bom café é motivo de alegria!</h3>
-        </div>
-        <div class="informacoes3">
-            <h2 class="subtitulo">conheça o café gourmet manhattan?</h2>
-            <p class="paragraph">Segundo a Metodologia de Avaliação Sensorial da SCA (Specialty Coffee
-                Association), usada no mundo todo, um café especial é todo aquele que
-                atinge, no mínimo, 80 pontos na escala de pontuação da metodologia (que
-                vai até 100). O Café Manhattan destaca-se nos atributos fragrância,
-                corpo, harmonia, doçura e sabor, nesse caso, possuindo sabores e aromas
-                que podem ser frutados, herbais, doces como caramelo e chocolate.
-                Podemos fazer uma analogia com o vinho, pois o café Manhattan também
-                pode ser apreciado por suas características sensoriais e não apenas pela
-                cafeína. Através do excelente padrão de cultivo, cuidado pós-colheita e
-                da torra, você poderá experimentar diferentes e deliciosos tipos de
-                café.
-            </p>
-        </div>
+    <div id="informacoes" class="container-texto"> <!-- Seção Informações da página -->
+      <h2>EXPERIMENTE O MELHOR CAFÉ DA CIDADE!</h2>
+      <p>
+        O café não é uma simples bebida que foi preparada por alguém. O café é
+        momento e nós mostraremos isso. Frases como “Que tal tomarmos um café?”
+        ou até então “Vamos fazer um café?” são demonstrações de que um dos
+        momentos que mais reforçam os laços para com o próximo está finalmente
+        por acontecer. Fraco ou forte? Com ou sem açúcar? Você deseja açúcar ou
+        adoçante? Estas são frases que ouvimos em vários lugares. Em quase todos
+        os locais onde há pessoas há também café. Parecemos intrínsecos ao café.
+        Aqui na Manhattan serviremos para você com muito carinho o nosso querido
+        e amado Amaro’s Coffe diretamente do nosso cafezal em Minas Gerais. Para
+        todos nós, café é coisa séria e merece todo o cuidado.
+      </p>
     </div>
-    <div class="contatos">
-        <h2 class="subtitulo">
-            contatos & endereços
-        </h2>
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d126762.01704603752!2d-35.56015029362723!3d-6.853030928255405!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1687102099454!5m2!1spt-BR!2sbr"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
-        <p>Telefone & Whatsapp: (21)</p>
+    <div class="container-parallax2">
+      <h3>Um bom café é motivo de alegria!</h3>
+    </div>
+    <div class="container-texto">
+      <h2>O QUE É O CAFÉ MANHATTAN?</h2>
+      <p>
+        Segundo a Metodologia de Avaliação Sensorial da SCA (Specialty Coffee
+        Association), usada no mundo todo, um café especial é todo aquele que
+        atinge, no mínimo, 80 pontos na escala de pontuação da metodologia (que
+        vai até 100). O Café Manhattan destaca-se nos atributos fragrância,
+        corpo, harmonia, doçura e sabor, nesse caso, possuindo sabores e aromas
+        que podem ser frutados, herbais, doces como caramelo e chocolate.
+        Podemos fazer uma analogia com o vinho, pois o café Manhattan também
+        pode ser apreciado por suas características sensoriais e não apenas pela
+        cafeína. Através do excelente padrão de cultivo, cuidado pós-colheita e
+        da torra, você poderá experimentar diferentes e deliciosos tipos de
+        café.
+      </p>
+    </div>
+    <div class="container-parallax3">
+      <h3>A vida só começa depois do café!</h3>
+    </div>
+    <div class="container-texto">
+      <h2>CONHEÇA O CAFÉ GOURMET MANHATTAN?</h2>
+      <p>
+        As características desse tipo do café gourmet da Manhattan são muito
+        marcantes. O seu corpo vai depender da variedade do blend: quanto mais
+        “pesado” ele for na boca, maior o corpo. Quanto menor a sua pesagem,
+        menor o corpo. O nosso café gourmet é o mais bem avaliado no processo de
+        produção, para que ele não venha com nenhum tipo de defeito. O aroma é
+        bem perceptível e o consumidor consegue sentir nitidamente, sendo que
+        ele pode variar entre 4 aromas: florado, cítrico, achocolatado, frutado.
+        Essas variações são consequências dos grãos do tipo Arábica. Tudo isso
+        vai depender da torra, quanto mais clara ela for, maior será a acidez.
+      </p>
+    </div>
+    <div id="contatos" class="container-parallax4"> <!-- Seção Contatos da página -->
+      <h2>Contatos & Endereço</h2>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3673.116814396121!2d-43.36308168443389!3d-22.982731546364604!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bda2ed54ec2e1%3A0x4431d262cad1d163!2sAv.%20Ayrton%20Senna%2C%203000%20-%20Barra%20da%20Tijuca%2C%20Rio%20de%20Janeiro%20-%20RJ%2C%2022775-904!5e0!3m2!1spt-BR!2sbr!4v1673618057703!5m2!1spt-BR!2sbr"
+        width="1024"
+        height="450"
+        style="border: 0"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
+      <div class="container-contatos">
+        <p>Telefone & Whatsapp: (21) 99999-5555</p>
         <p>E-mail: contato@manhattan.com.br</p>
-        <p>Endereço: Av Ayrton Senna, 3000 - Barra da Tijuca - Rio de Janeiro</p>
+        <p>
+          Endereço: Av Ayrton Senna, 3000 - Barra da Tijuca - Rio de Janeiro
+        </p>
+      </div>
     </div>
-    <div class="horarios">
-        <h2>Horários de funcionamento</h2>
-        <ul class="lista">
-            <li>
-                <h3>segunda</h3>
-                <div></div>
-                <p>Fechado</p>
-            </li>
-            <li>
-                <h3>terça</h3>
-                <div></div>
-                <p>09:00 - 22:00</p>
-            </li>
-            <li>
-                <h3>quarta</h3>
-                <div></div>
-                <p>09:00 - 22:00</p>
-            </li>
-            <li>
-                <h3>quinta</h3>
-                <div></div>
-                <p>09:00 - 22:00</p>
-            </li>
-            <li>
-                <h3>sexta</h3>
-                <div></div>
-                <p>09:00 - 22:00</p>
-            </li>
-            <li>
-                <h3>sabado</h3>
-                <div></div>
-                <p>12:00 - 22:00</p>
-            </li>
-            <li>
-                <h3>domingo</h3>
-                <div></div>
-                <p>12:00 - 22:00</p>
-            </li>
-
+    <div id="horarios" class="container-parallax5"> <!-- Seção Horários - Lista da página -->
+      <h2>HORÁRIOS DE FUNCIONAMENTO</h2>
+      <div>
+        <ul class="lista-horarios">
+          <li>
+            <h3>SEGUNDA</h3>
+            <div></div>
+            <span class="texto-marrom">FECHADO</span>
+          </li>
+          <li>
+            <h3>TERÇA</h3>
+            <div></div>
+            <p>09:00 - 22:00</p>
+          </li>
+          <li>
+            <h3>QUARTA</h3>
+            <div></div>
+            <p>09:00 - 22:00</p>
+          </li>
+          <li>
+            <h3>QUINTA</h3>
+            <div></div>
+            <p>09:00 - 22:00</p>
+          </li>
+          <li>
+            <h3>SEXTA</h3>
+            <div></div>
+            <p>09:00 - 22:00</p>
+          </li>
+          <li>
+            <h3>SÁBADO</h3>
+            <div></div>
+            <p>12:00 - 22:00</p>
+          </li>
+          <li>
+            <h3>DOMINGO</h3>
+            <div></div>
+            <p>12:00 - 22:00</p>
+          </li>
         </ul>
+      </div>
     </div>
-    <div class="rodape">
-        <p>&copy; Manhattan - Coffee House - Todos os direitos reservados</p>
-        <p>Desenvolvido por "Jhonathan Henrique"</p>
-        <a href="#banner"></a>
+    <div class="container-rodape"> <!-- Rodapé da página -->
+      <p>&copy; Manhattan - Coffee House - Todos os direitos reservados</p>
+      <p>Desenvolvido por <span>Jhonathan Henrique</span></p>
+      <a href="#banner"></a>
     </div>
-</body>
-
+  </body>
 </html>
