modificaçao de teste

--- a/DevMedia/projetos/AlfaTech/index.html
+++ b/DevMedia/projetos/AlfaTech/index.html
@@ -32,7 +32,7 @@
     </header>
     <div class="banner">
         <div class="banner__text">
-        <p class="paragraph">Simples - fácil de usar - 10x mais rápido!</p>
+        <p class="paragraph">Simples - fácil de usar - 10x mais rápido</p>
         <h2 class="subtitulo">O melhor serviço chamadas na web para o seu Empreendimento.</h2>
         <p class="paragraph">Obtenha a melhor qualidade de chamada para o seu site. Não perca mais clientes por causa de
             falta de analise de chamadas de clientes.</p>
